fix: founder image alignment with text

--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -27,7 +27,7 @@
 
 .firstHalf {
   display: flex;
-  max-width: 56rem;
+  max-width: 57rem;
 }
 
 .imageShadow {
@@ -37,6 +37,7 @@
   padding: 0rem;
   position: relative;
   left: 5rem;
+  top: 2rem;
 }
 
 .founder {
